@@ -345,6 +345,8 @@ if __name__=='pymol.setting':
       normalize_o_maps      = 305
       swap_dsn6_bytes       = 306
       pdb_insertions_go_first = 307
+      roving_origin_z         = 308
+      roving_origin_z_cushion = 309
       
    setting_sc = Shortcut(SettingIndex.__dict__.keys())
 
